<resources>
    <string name="app_name">Bimo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="biolog_a_molecular">Biología Molecular ®</string>
    <string name="actualizar">Actualizar</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="salir">Salir</string>
    <string name="antigeno">Antigeno</string>
    <string name="nombre_trabajador">Nombre trabajador</string>
    <string name="frente">Frente</string>
    <string name="procedencia">Procedencia</string>
    <string name="segmento">Segmento</string>
    <string name="nombre_paciente">Nombre paciente</string>
    <string name="nombre">Nombre</string>
    <string name="fecha_de_registro">Fecha de registro</string>
    <string name="camper">Camper</string>
    <string name="sexo">Sexo</string>
    <string name="resultadoAlert">¿Está seguro de registrar este paciente?</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="fecha_de_toma">Fecha de toma</string>
    <string name="fecha_de_muestra">Fecha de muestra</string>
    <string name="tipo_de_muestra">Tipo de muestra</string>
    <string name="selecciona_el_dia">Selecciona el dia</string>
    <string name="evidencia">Evidencia</string>
    <string name="registrar">Registrar</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="clave">Clave</string>
    <string name="cedula">Cedula</string>
    <string name="lugar_de_toma">Lugar de toma</string>
    <string name="profesi_n">Profesión</string>
    <string name="usuario">Usuario</string>
    <string name="example">example</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="registrar_resultado">Registrar Resultado</string>
    <string name="perfil_de_usuario">Perfil de Usuario</string>
    <string name="resultado">Resultado</string>
    <string name="title_activity_antigeno_consultar_resultado">ANTIGENO_consultar_resultado</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="url_del_pdf">URL del pdf</string>
    <string name="descargar_reporte">Descargar reporte</string>
    <string name="guardar">Guardar</string>
</resources>