<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".ANTIGENO.ANTIGENO_resultado">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/registrar_resultado"
        android:textColor="@color/ColorTextoBold"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/ColorBannerSuperiorFragment"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/backHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            android:textColor="@color/ColorTituloActivity"
            android:textSize="18sp"
            android:text="@string/regresar" />

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/reloadActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginRight="20dp"
                android:onClick="reloadSpinner"
                android:background="@color/colorPrimaryVariant"
                app:srcCompat="@drawable/ic_baseline_loop_24" />
        </LinearLayout>-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/PositivoLayout"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <Button
            android:id="@+id/PositivoButton"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#C61616"
            android:text="Positivo"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/NegativoLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PositivoLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ColorTextoBanner"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:text="@string/nombre"
                android:textColor="@color/ColorTextAccion"
                android:textSize="24sp"
                android:textStyle="bold"
                android:tooltipText="Nombre del Paciente" />

            <TextView
                android:id="@+id/textNombrePasiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/nombre_paciente"
                android:textColor="@color/ColorTextoLight"
                android:textSize="25sp"
                android:tooltipText="Nombre del Paciente" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ColorTextoBanner"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:textColor="@color/ColorTextAccion"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/procedencia"
                android:tooltipText="Nombre del Paciente" />

            <TextView
                android:id="@+id/textProcedencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/ColorTextoLight"
                android:textSize="25sp"
                android:text="@string/procedencia"
                android:tooltipText="Procedencia del paciente" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ColorTextoBanner"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:text="@string/fecha_de_registro"
                android:textColor="@color/ColorTextAccion"
                android:textSize="24sp"
                android:textStyle="bold"
                android:tooltipText="Nombre del Paciente" />

            <TextView
                android:id="@+id/textFechaIngreso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/fecha_de_registro"
                android:textColor="@color/ColorTextoLight"
                android:textSize="25sp"
                android:tooltipText="Procedencia del paciente" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ColorTextoBanner"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:text="@string/lugar_de_toma"
                android:textColor="@color/ColorTextAccion"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textCamper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/camper"
                android:textColor="@color/ColorTextoYellow"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ColorTextoBanner"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:text="@string/sexo"
                android:textColor="@color/ColorTextAccion"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textColor="@color/ColorTextoLight"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/NegativoLayout"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/NegativoButton"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#29A50E"
            android:text="Negativo"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>